Fixed Scaling on mobile devices 	modified:   firebase-debug.log 	modified:   src/app/root-folders/root-folders.component.css 	modified:   src/app/root-folders/root-folders.component.html

--- a/src/app/root-folders/root-folders.component.css
+++ b/src/app/root-folders/root-folders.component.css
@@ -1,10 +1,41 @@
-img{
+img {
 	object-fit: cover;
 }
 
-.folder-tn{
-    border-radius: 10px;
-    margin-left: 50px;
-    margin-right: 50px;
+.folder-tn {
+    width: 100%;
+    height: 100%;
+    animation: img-zoom-out 2s;
+}
+.tn-container{
     overflow: hidden;
+    border-radius: 10px;
+    margin: 10px;
+    height: 200px;
+    width: 200px;
+    cursor: pointer;
+}
+
+.folder-tn:hover {
+    animation: img-zoom 2s;
+    transform: scale(1.2);
+}
+
+@keyframes img-zoom {
+    0%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(1.2);
+    }
+}
+
+@keyframes img-zoom-out {
+    0%{
+        transform: scale(1.2);
+    }
+    100%{
+        transform: scale(1);
+    }
+    
 }
